<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorWhite"
            >

        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            >

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                >

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentScrim="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <ImageView
                            android:id="@+id/iv_product"
                            android:contentDescription="@string/cd_product_image"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_image_detail"
                            app:layout_collapseMode="parallax"
                            android:background="@color/colorBlack"
                            android:src="@drawable/ic_img_not_found"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            >
                        </ImageView>

                        <View
                            android:id="@+id/view_edit_bg"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/bg_trans_rect"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_edit"
                            app:layout_constraintTop_toTopOf="@+id/iv_edit"
                            />

                        <ImageView
                            android:id="@+id/iv_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:padding="@dimen/view_space_8"
                            android:src="@drawable/ic_edit"
                            android:contentDescription="@string/cd_edit_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/layout_ns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/view_space_10"
                    android:paddingStart="@dimen/view_space_22"
                    >

                    <TextView
                        android:id="@+id/tv_unit_price_title"
                        style="@style/TvTitle.Scrollable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_space_12"
                        android:text="@string/label_unit_price"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_unit_price_value"
                        style="@style/TvSubtitle.Scrollable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_space_12"
                        tools:text="@string/placeholder"
                        app:layout_constraintTop_toTopOf="@id/tv_unit_price_title"
                        app:layout_constraintStart_toEndOf="@+id/tv_unit_price_title"
                        app:layout_constraintLeft_toRightOf="@+id/tv_unit_price_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_unit_price_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_unit_price"
                            android:inputType="number"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_total_price_title"
                        style="@style/TvTitle.Scrollable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_space_28"
                        android:text="@string/label_total_price"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layout_quantity"
                        />

                    <TextView
                        android:id="@+id/tv_total_price_value"
                        style="@style/TvSubtitle.Scrollable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_space_12"
                        tools:text="@string/placeholder"
                        app:layout_constraintTop_toTopOf="@id/tv_total_price_title"
                        app:layout_constraintStart_toEndOf="@+id/tv_total_price_title"
                        app:layout_constraintLeft_toRightOf="@+id/tv_total_price_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/tv_total_price_title"
                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/width_quantity"
                        app:layout_constraintWidth_min="@dimen/width_quantity"
                        android:layout_marginTop="@dimen/view_space_28"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_unit_price_value"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <include
                            android:id="@+id/include_layout_quantity"
                            layout="@layout/layout_quantity"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--Product Name-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_product_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_space_28"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_total_price_value"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_product_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_product_name"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!--Supplier Name-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_supplier_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_supplier_name"
                        android:layout_marginTop="@dimen/view_space_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_product_name"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_supplier_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_supplier_name"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Supplier Phone Number-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_supplier_phone"
                        style="@style/TvTitle.Scrollable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_supplier_phone_number"
                        android:layout_marginTop="@dimen/view_space_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_supplier_name"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_supplier_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_supplier_phone_number"
                            android:maxLength="10"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:imeOptions="actionDone"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Order-->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_space_18"
                        app:cornerRadius="@dimen/view_space_18"
                        app:rippleColor="@color/colorWhite"
                        app:strokeColor="@color/colorOrange"
                        android:text="@string/label_order"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_supplier_phone"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</layout>